2001-03-21  Bruno Haible  <haible@clisp.cons.org>

	* misc.d: Include <stdio.h>.

2001-03-21  Bruno Haible  <haible@clisp.cons.org>

	Make --without-unicode work again.
	* error.d (write_errorasciz_substring): Fix typo.
	* init.lisp: Load "spanish" only if UNICODE.
	* makemake.in (LPARTS): Add "spanish" only if UNICODE is enabled.
	* type.lisp (charset-subtypep): Avoid warning.
	* stream.d (test_external_format_arg) [!UNICODE]: Accept and ignore
	any symbols in the CHARSET package.

2001-03-20  Bruno Haible  <haible@clisp.cons.org>

	* configure: Add trailing slash to www.lisp.org URL.
	* cfgacorn.lisp (*clhs-root-default*): Likewise.
	* cfgamiga.lisp (*clhs-root-default*): Likewise.
	* cfgdos.lisp (*clhs-root-default*): Likewise.
	* cfgwin32.lisp (*clhs-root-default*): Likewise.
	* makemake.in (HSDEFAULT): Likewise.
	(hyperspec): Check existence of directory if it's an absolute
	directory. Remove trailing slash afterwards.
	* clhs.lisp (clhs): Accept a clhs-root with or without trailing slash.

2001-03-20  Bruno Haible  <haible@clisp.cons.org>

	* compiler.lisp (compile-file-pathname-helper): Rewritten. Obey
	output-file's directory even if it is a relative directory.

2001-03-19  Bruno Haible  <haible@clisp.cons.org>

	* pathname.d (find_executable): Use strcpy instead of sprintf.

2001-03-18  Bruno Haible  <haible@clisp.cons.org>

	* spvw_memfile.d (DUMPHOST_LEN): New macro.
	(memdump_header): Make _dumphost size OS independent.
	(savemem): Simplify filling of hostname and _dumphost. Use UTF-8
	encoding.
	(loadmem): Move extraction of _dumptime and _dumphost to the end.
	Use UTF-8 encoding.

	* socket.d (MACHINE-INSTANCE): Return hostname as returned by
	gethostbyname, i.e. including the domainname.

2001-03-18  Bruno Haible  <haible@clisp.cons.org>

	* clhs.lisp: Export CLHS-ROOT.
	* cfgunix.lisp: Export CLHS-ROOT and *CLHS-ROOT-DEFAULT*.
	* cfgacorn.lisp: Likewise.
	* cfgamiga.lisp: Likewise.
	* cfgdos.lisp: Likewise.
	* cfgsunux.lisp: Likewise.